--- a/index.html
+++ b/index.html
@@ -485,5 +485,42 @@
             </div>
          </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <div class="flogo">
+                <img src="logo.svg" alt="logoku">
+                <div class="flogotexts">
+                  <p>  Айболит</p>
+                        <h6>
+                    ветеринарная клиника
+                </h6>  
+                </div>
+                
+            </div>
+            <h5 class="footertext">
+                Политика конфиденциальности в отношении обработки персональных данных
+            </h5>
+            <div class="glavnaya">
+               <p>Главная</p>
+               <p> Услуги и цены</p>
+               <p>История компании</p>
+               <p>    Наши специалисты</p>
+               <p>    Вакансии</p>
+               <p>  Реквизиты</p>
+               <p>   Онлайн-оплата</p>
+            </div>
+            <div class="otzivi">
+                <p>Отзывы</p>
+                <p>Контакты</p>
+                <p>Груминг-салон</p>
+                <p>
+                    Косметика</p>
+                    <p>Новости и акции</p>
+                <p>Блог</p>
+
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
