--- a/index.html
+++ b/index.html
@@ -520,6 +520,27 @@
                 <p>Блог</p>
 
             </div>
+            <div class="imgfooter">
+                <img src="google-play-badge (1).png" class="appmap">
+                <img src="google-play-badge (1).png" class="appmapp1">
+                </div>
+
+            <div class="socialss">
+                <img src="inst.png" alt="instagramm">
+                <img src="fb.png" alt="fbb">
+                <img src="vk.png" alt="vkk">
+                <img src="youtube.png" alt="ytt">
+                </div>
+                <div class="emailss">
+                <p class="emails">
+                    aibolit34.ru
+        aibolit34@gmail.com
+                </p>
+          <h4 class="madee">
+            Made with    from UnitBean
+          </h4>
+        
+        </div>
         </div>
     </footer>
 </body>
